19-NetworkPolicy/p1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    role: db
  name: pod
spec:
  containers:
  - image: nginx
    name: pod
    args:
      - /bin/sh
      - -c
      - sleep 100
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
