19-NetworkPolicy/p2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    role: frontend
  name: pod2
spec:
  containers:
  - image: nginx
    name: pod2
    resources: {}
    args:
      - /bin/sh
      - -c
      - sleep 100
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
